# HeadtrackRS

./: .gitignore  Cargo.toml  LICENSE  README.md  analyze_headtrack.py  sonar-project.properties
.cargo/: config.toml
.github/workflows/: clippy.yml  codeql.yml  sonarcloud.yml  tarpaulin.yml
crates/headtrack-core/: Cargo.toml
crates/headtrack-core/src/: config.rs  input.rs  lib.rs  output.rs  pipeline.rs  pose.rs
crates/headtrack-core/src/filter/: kalman.rs  mod.rs  one_euro.rs
crates/headtrack-daemon/: Cargo.toml
crates/headtrack-daemon/src/: main.rs
crates/headtrack-engine/: Cargo.toml
crates/headtrack-engine/src/: lib.rs
crates/headtrack-gui/: Cargo.toml
crates/headtrack-gui/src/: main.rs
crates/headtrack-input-linuxtrack/: Cargo.toml
crates/headtrack-input-linuxtrack/src/: lib.rs
crates/headtrack-input-neuralnet/: Cargo.toml
crates/headtrack-input-neuralnet/src/: image_proc.rs  lib.rs  localizer.rs  math.rs  pose_estimator.rs  tracker.rs  v4l2_capture.rs
crates/headtrack-input-smoothtrack/: Cargo.toml
crates/headtrack-input-smoothtrack/src/: lib.rs
crates/headtrack-ipc/: Cargo.toml
crates/headtrack-ipc/src/: client.rs  codec.rs  lib.rs  server.rs
crates/headtrack-npclient/: Cargo.toml  NPClient64.def  build.rs
crates/headtrack-npclient/src/: lib.rs
crates/headtrack-output-simconnect/: Cargo.toml
crates/headtrack-output-simconnect/examples/: probe.rs  sweeper.rs  sweeper2.rs  test_flow.rs
crates/headtrack-output-simconnect/src/: connection.rs  lib.rs  protocol.rs
crates/headtrack-output-udp/: Cargo.toml
crates/headtrack-output-udp/src/: lib.rs
crates/headtrack-output-wine/: Cargo.toml
crates/headtrack-output-wine/src/: lib.rs
crates/headtrack-tester/: Cargo.toml
crates/headtrack-tester/src/: main.rs
crates/headtrack-xplane/: Cargo.toml  build.rs
crates/headtrack-xplane/src/: ffi.rs  ipc.rs  lib.rs
packaging/appimage/: build-appimage.sh
packaging/appimage/AppDir/: .DirIcon  AppRun  headtrack-rs.desktop
packaging/appimage/AppDir/lib/: libonnxruntime_providers_shared.so.1.20.1
packaging/systemd/: headtrackd.service  install.sh
tools/gen-icon/: Cargo.toml
tools/gen-icon/src/: main.rs
