[package]
name = "headtrack-output-udp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Generic UDP output in opentrack-compatible format"

[dependencies]
headtrack-core = { path = "../headtrack-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
