[package]
name = "headtrack-tester"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "headtrack-tester"
path = "src/main.rs"

[dependencies]
headtrack-ipc  = { path = "../headtrack-ipc" }
headtrack-core = { path = "../headtrack-core" }
tokio          = { workspace = true }
anyhow         = { workspace = true }
crossterm      = "0.28"
